cart.js created, cart total working, rendering on index.html instead of cart.html

--- a/cart.html
+++ b/cart.html
@@ -1,160 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google fonts -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap" rel="stylesheet"> 
-      <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap" rel="stylesheet">
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- Add Header -->
-    <header>
-      <!-- Navigation Links -->
-      <div class="top-header">
-        <div class="logo">
-          <a>
-            <img
-              src="./images/Wiskers and Wag.png" 
-              alt="logo"
-              width="128"
-              height="128">
-            <span>Whiskers & Wag</span>
-          </a>
+<head>
+  <link rel="stylesheet" type="text/css" href="./style.css" />
+</head>
+<body>
+  <main>
+    <h1>Your Cart</h1>
+    <div class="shopping-cart">
+      <div class="column-labels">
+        <label class="product-image">Image</label>
+        <label class="product-details">Product Name</label>
+        <label class="product-price">Price</label>
+        <label class="product-quantity">Quantity</label>
+        <label class="product-removal">Remove</label>
+        <label class="product-line-price">Total</label>
+      </div>
+
+      <!-- Dynamic Cart Container -->
+      <section id="cart-items">
+        <!-- Cart items will be dynamically added here -->
+      </section>
+
+      <div class="totals">
+        <div class="totals-item">
+          <label>Subtotal</label>
+          <div class="totals-value" id="cart-subtotal">0.00</div>
         </div>
-
-        <a class="cart" href="./cart.html">
-          <img
-            src="./images/shopping_cart.png"
-            alt="shopping cart"
-            width="30"
-            height="30"
-          />
-        </a>
+        <div class="totals-item totals-item-total">
+          <label>Grand Total</label>
+          <div class="totals-value" id="cart-total">0.00</div>
+        </div>
       </div>
-      <nav class="navbar-row">
-        <li><a href="./index.html">HOME</a></li>
-        <li><a href="./cat.html">CAT</a></li>
-        <li><a href="./dog.html">DOG</a></li>
-      </nav>
-    </header>
-    <main>
-      <div class="banner">
-        <h1>Your Pet's Paradise</h1>
+      <button class="checkout" onclick="checkout()">Checkout</button>
     </div>
-      <h1>Your Cart</h1>
-
-<section class="cart-section">
-  <div class="image-container">
-      <img class="cart-img" src="images/cat_tree.webp" alt="Cat scratching tree">
-  </div>
-  <div class="cart-container">
-      <div class="cart">
-          <div class="cart-left">
-            <h3>Cat Tree</h3>
-          </div>
-          <div class="cart-right">
-            <button class="cart-button">
-              <img
-                  src="./images/bin.png" 
-                  alt="logo"
-                  width="20"
-                  height="20">
-            </button>
-          </div>
-      </div>
-      <div class="cart">
-          <div class="cart-left">
-            <input type="number" id="quantity" name="quantity" min="0" max="100" step="1" value="1">
-          </div>
-          <div class="content-right">
-            <p>$100.00</p>
-          </div>
-      </div>
-  </div>
-  
-</section>
-<section class="cart-section">
-  <div class="image-container">
-      <img class="cart-img" src="images/cat_food.webp" alt="Ziwi Peak air-dried cat food">
-  </div>
-  <div class="cart-container">
-      <div class="cart">
-          <div class="cart-left">
-            <h3>Cat Food</h3>
-          </div>
-          <div class="cart-right">
-            <button class="cart-button">
-              <img
-                  src="./images/bin.png" 
-                  alt="logo"
-                  width="20"
-                  height="20">
-            </button>
-          </div>
-      </div>
-      <div class="cart">
-          <div class="cart-left">
-            <input type="number" id="quantity" name="quantity" min="0" max="100" step="1" value="2">
-          </div>
-          <div class="content-right">
-            <p>$1.50</p>
-          </div>
-      </div>
-  </div>
-  
-</section><section class="cart-section">
-  <div class="image-container">
-      <img class="cart-img" src="images/dog_lead.webp" alt="Dog lead">
-  </div>
-  <div class="cart-container">
-      <div class="cart">
-          <div class="cart-left">
-            <h3>Dog Lead</h3>
-          </div>
-          <div class="cart-right">
-            <button class="cart-button">
-              <img
-                  src="./images/bin.png" 
-                  alt="logo"
-                  width="20"
-                  height="20">
-            </button>
-          </div>
-      </div>
-      <div class="cart">
-          <div class="cart-left">
-            <input type="number" id="quantity" name="quantity" min="0" max="100" step="1" value="2">
-          </div>
-          <div class="content-right">
-            <p>$10.00</p>
-          </div>
-      </div>
-  </div>
-  
-</section>
-
-  <br>
-
-  <div class="cart-cost">
-    <div class="cost-paragraphs">
-      <p>Cart Price</p>
-      <p>$223.00</p>
-    </div>
-    <button class="product-button">Checkout</button>
-  </div>
-  <br>
-
-    </main>
-    <!-- Footer -->
-    <footer>
-      <p>© 2023 Whiskers & Wag</p>
-    </footer>
-    
-  </body>
+  </main>
+  <script src="cart.js"></script> <!-- Include the JavaScript file for cart functionality -->
+</body>
 </html>
