Add script.js with cart objects and modify button in html

--- a/cart.html
+++ b/cart.html
@@ -79,7 +79,7 @@
   </div>
   
 </section>
-<section class="cart-section">
+<!-- <section class="cart-section">
   <div class="image-container">
       <img class="cart-img" src="images/cat_food.webp" alt="Ziwi Peak air-dried cat food">
   </div>
@@ -135,9 +135,9 @@
             <p>$10.00</p>
           </div>
       </div>
-  </div>
+  </div> 
   
-</section>
+</section> -->
 
   <br>
 
@@ -155,6 +155,6 @@
     <footer>
       <p>© 2023 Whiskers & Wag</p>
     </footer>
-    
+        <script src="./script.js"></script>
   </body>
 </html>
