--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./style.css" />
     <title>Whiskers & Wag</title>
-    
   </head>
 
   <body>
@@ -21,10 +26,11 @@
         <div class="logo">
           <a>
             <img
-              src="./images/Wiskers and Wag.png" 
+              src="./images/Wiskers and Wag.png"
               alt="logo"
               width="128"
-              height="128">
+              height="128"
+            />
             <span>Whiskers & Wag</span>
           </a>
         </div>
@@ -47,9 +53,9 @@
     <main>
       <!-- Banner -->
       <div class="banner">
-          <h1>Your Pet's Paradise</h1>
+        <h1>Your Pet's Paradise</h1>
       </div>
-      
+
       <h2>NEW PRODUCTS!</h2>
       <!-- Products -->
       <section class="product-container">
@@ -59,7 +65,9 @@
             <h3>Cat Tree</h3>
             <p>$100</p>
           </div>
-          <button class="product-button">Add to Cart</button>
+          <button class="product-button" onclick="addToCart(1)">
+            Add to Cart
+          </button>
         </div>
         <div class="card">
           <img src="images/cat_food.webp" alt="Ziwi Peak air-dried cat food" />
@@ -67,7 +75,9 @@
             <h3>Cat Food</h3>
             <p>$1.50</p>
           </div>
-          <button class="product-button">Add to Cart</button>
+          <button class="product-button" onclick="addToCart(2)">
+            Add to Cart
+          </button>
         </div>
         <div class="card">
           <img src="images/dog_lead.webp" alt="Dog lead" />
@@ -75,7 +85,9 @@
             <h3>Dog Lead</h3>
             <p>$10</p>
           </div>
-          <button class="product-button">Add to Cart</button>
+          <button class="product-button" onclick="addToCart(3)">
+            Add to Cart
+          </button>
         </div>
         <div class="card">
           <img src="images/cat_bed.webp" alt="Cat bed" />
@@ -83,7 +95,9 @@
             <h3>Pet Bed</h3>
             <p>$30</p>
           </div>
-          <button class="product-button">Add to Cart</button>
+          <button class="product-button" onclick="addToCart(4)">
+            Add to Cart
+          </button>
         </div>
         <div class="card">
           <img src="images/dog_treat.webp" alt="Veggiedent dog treat" />
@@ -91,7 +105,9 @@
             <h3>Veggiedent</h3>
             <p>$12</p>
           </div>
-          <button class="product-button">Add to Cart</button>
+          <button class="product-button" onclick="addToCart(5)">
+            Add to Cart
+          </button>
         </div>
       </section>
     </main>
@@ -100,5 +116,6 @@
     <footer>
       <p>© 2023 Whiskers & Wag</p>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
