footer & <script src="./fetch.js"></script> updated on cart.html, cat.html & dog.html .

--- a/dog.html
+++ b/dog.html
@@ -58,9 +58,20 @@
     </section>
 
     </main>
-    <!-- Footer -->
-    <footer>
-      <p>© 2023 Whiskers & Wag</p>
-    </footer>
+<!-- Footer -->
+<footer>
+  <div>
+      <p id="learners" hidden></p>
+      <h4>Cohort:</h4>
+      <p id="cohort"></p>
+      <h4>Instructor:</h4>
+      <p id="instructor"></p>
+      <h4>Project Team</h4>
+      <p id="selectedLearners"></p>
+  </div>
+  <p>© 2023 Whiskers & Wag</p>
+</footer>
+
+<script src="./fetch.js"></script>
   </body>
 </html>
