cart mostly working, just needs remove single item button

--- a/cart.html
+++ b/cart.html
@@ -1,159 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google fonts -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap" rel="stylesheet"> 
-      <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap" rel="stylesheet">
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- Add Header -->
-    <header>
-      <!-- Navigation Links -->
-      <div class="top-header">
-        <div class="logo">
-          <a>
-            <img
-              src="./images/Wiskers and Wag.png" 
-              alt="logo"
-              width="128"
-              height="128">
-            <span>Whiskers & Wag</span>
-          </a>
-        </div>
 
-        <a class="cart" href="./cart.html">
-          <img
-            src="./images/shopping_cart.png"
-            alt="shopping cart"
-            width="30"
-            height="30"
-          />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Metal+Mania&family=Paytone+One&family=Space+Mono&display=swap"
+    rel="stylesheet">
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="./style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <!-- Add Header -->
+  <header>
+    <!-- Navigation Links -->
+    <div class="top-header">
+      <div class="logo">
+        <a>
+          <img src="./images/Wiskers and Wag.png" alt="logo" width="128" height="128">
+          <span>Whiskers & Wag</span>
         </a>
       </div>
-      <nav class="navbar-row">
-        <li><a href="./index.html">HOME</a></li>
-        <li><a href="./cat.html">CAT</a></li>
-        <li><a href="./dog.html">DOG</a></li>
-      </nav>
-    </header>
-    <main>
-      <div class="banner">
-        <h1>Your Pet's Paradise</h1>
-    </div>
-      <h1>Your Cart</h1>
 
-<section class="cart-section">
-  <div class="image-container">
-      <img class="cart-img" src="images/cat_tree.webp" alt="Cat scratching tree">
-  </div>
-  <div class="cart-container">
-      <div class="cart">
+      <a class="cart" href="./cart.html">
+        <img src="./images/shopping_cart.png" alt="shopping cart" width="30" height="30" />
+      </a>
+    </div>
+    <nav class="navbar-row">
+      <li><a href="./index.html">HOME</a></li>
+      <li><a href="./cat.html">CAT</a></li>
+      <li><a href="./dog.html">DOG</a></li>
+    </nav>
+  </header>
+  <main>
+    <div class="banner">
+      <h1>Your Pet's Paradise</h1>
+    </div>
+    <h1>Your Cart</h1>
+
+
+
+    <section id="cart-container">
+
+
+
+
+    </section>
+    <!-- <section class="cart-section">
+      <div class="image-container">
+        <img class="cart-img" src="images/cat_tree.webp" alt="Cat scratching tree">
+      </div>
+      <div class="cart-container">
+        <div class="cart">
           <div class="cart-left">
             <h3>Cat Tree</h3>
           </div>
           <div class="cart-right">
             <button class="cart-button">
-              <img
-                  src="./images/bin.png" 
-                  alt="logo"
-                  width="20"
-                  height="20">
+              <img src="./images/bin.png" alt="logo" width="20" height="20">
             </button>
           </div>
-      </div>
-      <div class="cart">
+        </div>
+        <div class="cart">
           <div class="cart-left">
             <input type="number" id="quantity" name="quantity" min="0" max="100" step="1" value="1">
           </div>
           <div class="content-right">
             <p>$100.00</p>
           </div>
+        </div>
       </div>
-  </div>
-  
-</section>
-<section class="cart-section">
-  <div class="image-container">
-      <img class="cart-img" src="images/cat_food.webp" alt="Ziwi Peak air-dried cat food">
-  </div>
-  <div class="cart-container">
-      <div class="cart">
+
+    </section>
+    <section class="cart-section">
+      <div class="image-container">
+        <img class="cart-img" src="images/cat_food.webp" alt="Ziwi Peak air-dried cat food">
+      </div>
+      <div class="cart-container">
+        <div class="cart">
           <div class="cart-left">
             <h3>Cat Food</h3>
           </div>
           <div class="cart-right">
             <button class="cart-button">
-              <img
-                  src="./images/bin.png" 
-                  alt="logo"
-                  width="20"
-                  height="20">
+              <img src="./images/bin.png" alt="logo" width="20" height="20">
             </button>
           </div>
-      </div>
-      <div class="cart">
+        </div>
+        <div class="cart">
           <div class="cart-left">
             <input type="number" id="quantity" name="quantity" min="0" max="100" step="1" value="2">
           </div>
           <div class="content-right">
             <p>$1.50</p>
           </div>
+        </div>
       </div>
-  </div>
-  
-</section><section class="cart-section">
-  <div class="image-container">
-      <img class="cart-img" src="images/dog_lead.webp" alt="Dog lead">
-  </div>
-  <div class="cart-container">
-      <div class="cart">
+
+    </section>
+    <section class="cart-section">
+      <div class="image-container">
+        <img class="cart-img" src="images/dog_lead.webp" alt="Dog lead">
+      </div>
+      <div class="cart-container">
+        <div class="cart">
           <div class="cart-left">
             <h3>Dog Lead</h3>
           </div>
           <div class="cart-right">
             <button class="cart-button">
-              <img
-                  src="./images/bin.png" 
-                  alt="logo"
-                  width="20"
-                  height="20">
+              <img src="./images/bin.png" alt="logo" width="20" height="20">
             </button>
           </div>
-      </div>
-      <div class="cart">
+        </div>
+        <div class="cart">
           <div class="cart-left">
             <input type="number" id="quantity" name="quantity" min="0" max="100" step="1" value="2">
           </div>
           <div class="content-right">
             <p>$10.00</p>
           </div>
+        </div>
       </div>
-  </div>
-  
-</section>
 
-  <br>
+    </section> -->
 
-  <div class="cart-cost">
-    <div class="cost-paragraphs">
-      <p>Cart Price</p>
-      <p>$223.00</p>
+    <br>
+
+    <div class="cart-cost">
+      <div class="cost-paragraphs">
+        <p>Cart Price</p>
+        <p id="cart-total"></p>
+      </div>
+      <button id="clear-cart" class="product-button">Clear my cart</button>
+      <button class="product-button">Checkout</button>
     </div>
-    <button class="product-button">Checkout</button>
-  </div>
-  <br>
+    <br>
 
-    </main>
-<!-- Footer -->
-<footer>
-  <div>
+  </main>
+  <!-- Footer -->
+  <footer>
+    <div>
       <p id="learners" hidden></p>
       <h4>Cohort:</h4>
       <p id="cohort"></p>
@@ -161,11 +155,12 @@
       <p id="instructor"></p>
       <h4>Project Team</h4>
       <p id="selectedLearners"></p>
-  </div>
-  <p>© 2023 Whiskers & Wag</p>
-</footer>
+    </div>
+    <p>© 2023 Whiskers & Wag</p>
+  </footer>
 
-<script src="./fetch.js"></script>
- 
-  </body>
+  <script src="./cart.js"></script>
+
+</body>
+
 </html>
