--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <span>Whiskers & Wag</span>
         </a>
       </div>
+      <div id="clock"></div>
 
       <a class="cart" href="./cart.html">
         <img src="./images/shopping_cart.png" alt="shopping cart" width="30" height="30" />
